<resources>
    <string name="app_name">Denuncia Ciudadana Ixtlahuacan</string>
    <string name="action_sign_in_short">Registrarse</string>
    <string name="email">Email</string>
    <string name="minimum_password">Contraseña demasiada corta, esctibe almenos 6 digitos!</string>
    <string name="auth_failed">Error de autentificacion, revisa tu email y password</string>
    <string name="change_email">Cambiar email</string>
    <string name="change_password">Cambiar Password</string>
    <string name="send_password_reset_email">Reenviar password</string>
    <string name="remove_user">Borrar Usuario</string>
    <string name="new_pass">Cambiar password</string>
    <string name="title_activity_profile"></string>
    <string name="title_activity_login">Ingresar</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Nombre Completo</string>
    <string name="btn_login">Ingresar</string>
    <string name="prompt_password">Ingresa tu password</string>
    <string name="btn_link_to_register">No tienes una cuenta, registrate ahora!</string>
    <string name="btn_link_to_login">Ya estas registrado. Ingresa ahora!</string>
    <string name="title_activity_reset_password">Cambiar Contraseña</string>
    <string name="btn_forgot_password">Olvidaste tu contraseña?</string>
    <string name="btn_reset_password">Cambiar Contraseña</string>
    <string name="btn_back">Regresar</string>
    <string name="hint_new_email">Nuevo Email</string>
    <string name="btn_change">Cambiar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Eliminar</string>
    <string name="btn_sign_out">Salir</string>
    <string name="lbl_forgot_password">Olvidaste tu contraseña?</string>
    <string name="forgot_password_msg">necesitamos tu correo para enviarte las instrucciones de recuperacion de contraseña.</string>
    <string name="email_id">Email ID</string>
</resources>
