<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.firebaseloginapp.AccountActivity.MainActivity">
    <EditText
        android:id="@+id/old_email"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="82dp" />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignTop="@+id/useremail"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:contentDescription=""
        android:layout_marginTop="20dp"
        android:src="@mipmap/ixtlahuacan"
        tools:ignore="ContentDescription" />



    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/prompt_password"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="125dp"
        android:layout_above="@+id/newPassword"
        android:layout_toEndOf="@+id/progressBar" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/changePass"
        android:layout_alignEnd="@+id/old_email"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="168dp" />

    <TextView
        android:id="@+id/changePass"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/old_email"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:text="La aplicación de Denuncia Ciudadana de Ixtlahuacan de los membrillos es una herramienta a través de la cual las y los ciudadanos pueden denunciar hechos en los cuales detecten actos , de una forma fácil y sencilla, a través de esta aplicación es posible adjuntar evidencia.  "
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="211dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/remove"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/remove_user_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_remove"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="259dp" />

    <Button
        android:id="@+id/change_password_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/remove_user_button"
        android:layout_alignStart="@+id/remove_user_button"
        android:background="@color/colorAccent"
        android:text="Denunciar"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="312dp" />

    <Button
        android:id="@+id/remove_user_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_user"
        android:visibility="invisible"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="408dp"
        android:layout_above="@+id/sign_out"
        android:layout_alignStart="@+id/sign_out" />

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:visibility="invisible"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="456dp" />

    <TextView
        android:id="@+id/useremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/old_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:gravity="center"
        android:visibility="invisible"
        android:hint="@string/email_id"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

</RelativeLayout>
